objects/Vidyarthi__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_ID__c</fullName>
        <label>Email ID</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pan_Card_Number__c</fullName>
        <label>Pan Card Number</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reserved_Quota_Admission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reserved Quota Admission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Score</label>
        <referenceTo>Score__c</referenceTo>
        <relationshipLabel>Vidyarthulu</relationshipLabel>
        <relationshipName>Vidyarthulu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secret_code__c</fullName>
        <label>Secret code</label>
        <length>6</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Vidyarthi_ID__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Vidyarthi ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Vidyarthi_Percentage__c</fullName>
        <formula>( Score__r.Subject1_Marks__c +  Score__r.Subject2_Marks__c ) /2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vidyarthi Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Vidyarthi</label>
    <nameField>
        <label>Vidyarthi Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vidyarthulu</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>